--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ padding-top: 10px;}
 img{width: 250px;
 display: block;
 border: dashed 10px;
-border-color: white;}
+border-color: white;
+margin-left: auto;
+margin-right: auto;}
 
 div{min-height: 125px;
 padding: 20px;
@@ -42,12 +44,18 @@ border-top: solid 2px;
 border-right: solid 5px;
 border-color: white;}
 
+.blue h2 {color: #c4c4c4;}
+
+.blue p {color: #c4c4c4;}
+
 .yellow{background-color: yellow;
 text-align: right;
 margin-left: 50px;
 border-bottom: solid 2px;
 border-left: solid 5px;
 border-color: white;}
+
+.yellow p{color: #707070;}
 
 .green{background-color: green;
 text-align: left;
