--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,14 @@ body{font-family: Arial, Verdana;
 background-color: black;
 color: white;
 margin-top: 20px;
-margin-bottom: 20px;}
+margin-bottom: none;
+margin-left: 20px;
+margin-right: 20px;
+}
 
 h1{font-size: 42px;
-text-align: center;}
+text-align: center;
+padding: 15px;}
 
 h2{font-size: 30px;
 color: #0d0d0d;}
@@ -34,7 +38,9 @@ line-height: 2;}
 text-align: right;
 margin-left: 50px;
 border-bottom: solid 2px;
-border-left: solid 2px;
+border-left: solid 5px;
+border-right: none;
+border-top: none;
 border-color: white;}
 
 .blue{background-color: blue;
@@ -42,6 +48,8 @@ text-align: left;
 margin-right: 50px;
 border-top: solid 2px;
 border-right: solid 5px;
+border-left: none;
+border-bottom: none;
 border-color: white;}
 
 .blue h2 {color: #c4c4c4;}
@@ -51,25 +59,30 @@ border-color: white;}
 .yellow{background-color: yellow;
 text-align: right;
 margin-left: 50px;
+border-right: none;
+border-top: none;
 border-bottom: solid 2px;
 border-left: solid 5px;
 border-color: white;}
 
 .yellow p{color: #707070;}
 
-.green{background-color: green;
+.green{background-color: #00eb00;
 text-align: left;
 margin-right: 50px;
 border-top: solid 2px;
 border-right: solid 5px;
+border-left: none;
 border-color: white;}
 
 footer {
     background-image: linear-gradient(to bottom, #000000, #0000ff 25%, #0066ff 70%, #000000);
-}
+    border: solid 5px;
+    border-color: white;}
 
 footer p { font-size: 20px;
     text-align: right;
-    padding: 15px 15px 15px 0}
+    padding: 15px 15px 15px 0;
+}
 
 
