--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,13 @@ border-color: white;}
 
 .yellow p{color: #707070;}
 
-.green{background-color: #00eb00;
+.green{background-color: #008500;
 text-align: left;
 margin-right: 50px;
 border-top: solid 2px;
 border-right: solid 5px;
 border-left: none;
+border-bottom: none;
 border-color: white;}
 
 footer {
